--- a/roles/pterodactyl_panel/molecule/default/collections/requirements.yml
+++ b/roles/pterodactyl_panel/molecule/default/collections/requirements.yml
@@ -2,6 +2,8 @@ collections:
   # Used by molecule-docker to manage containers
   - name: community.general
   - name: community.docker
+  # For installing MariaDB
+  - name: community.mysql
 
 roles:
   - name: robertdebock.mysql
