--- a/.github/workflows/ci-roles.yml
+++ b/.github/workflows/ci-roles.yml
@@ -70,15 +70,12 @@ jobs:
           ansible-galaxy collection install maxhoesel-pterodactyl-*.tar.gz --force
 
       - name: Run Molecule tests
-        run: molecule test
+        # Try to run test.sh if it exists, run molecule test if not
+        run: ./molecule/test.sh || molecule test
         working-directory: "pterodactyl/roles/${{ matrix.role }}"
         env:
           PY_COLORS: "1"
           ANSIBLE_FORCE_COLOR: "1"
-
-      - name: Setup tmate session
-        if: ${{ failure() }}
-        uses: mxschmitt/action-tmate@v3
 
   lint:
     name: "ansible-lint ${{ matrix.ansible-version }}"
