--- a/roles/pterodactyl_panel/molecule/default/prepare.yml
+++ b/roles/pterodactyl_panel/molecule/default/prepare.yml
@@ -1,22 +1,9 @@
-- hosts: all
+- hosts: panel
   tasks:
     - name: Update APT cache
       apt:
         update_cache: yes
       when: ansible_os_family == "Debian"
-
-    - name: Setup Mariadb
-      include_role:
-        name: robertdebock.mysql
-      vars:
-        mysql_databases:
-          - name: panel_molecule
-            encoding: utf8
-            collation: utf8_bin
-        mysql_users:
-          - name: panel_molecule
-            password: panel_molecule
-            priv: "panel_molecule.*:ALL"
 
     - name: Copy existing SSL cert/key to nodes
       copy:
