--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -28,7 +28,8 @@ jobs:
           git config --global user.email "noreply@github.com"
 
       - name: Set Galaxy version tag
-        run: sed -i '/version: */c\version: ${{ github.event.inputs.version }}' galaxy.yml
+        run: |
+          sed -i '/version: */c\version: ${{ github.event.inputs.version }}' galaxy.yml
 
       - name: Generate full changelog
         run: "./git-chglog --next-tag v${{ github.event.inputs.version }} --output CHANGELOG.md"
