--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -17,10 +17,14 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Set up Python
+        uses: actions/setup-python@v2
       - name: Install dependencies
         run: |
           wget https://github.com/git-chglog/git-chglog/releases/download/v0.11.2/git-chglog_0.11.2_linux_amd64.tar.gz -O git-chglog.tar.gz
           tar xf git-chglog.tar.gz
+          python -m pip install --upgrade pip
+          pip install --upgrade ansible
 
       - name: Configure git
         run: |
@@ -34,16 +38,36 @@ jobs:
       - name: Generate full changelog
         run: "./git-chglog --next-tag v${{ github.event.inputs.version }} --output CHANGELOG.md"
 
-      - name: Commit and push changelog
+      - name: Commit and push Release
         run: |
           git add CHANGELOG.md
           git commit -m "Release ${{ github.event.inputs.version }}"
           git push
 
-      - name: Create pull request
-        uses: repo-sync/pull-request@v2
+      - name: Build Ansible Collection
+        run: ansible-galaxy collection build --force
+
+      - name: Create GitHub Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          destination_branch: "main"
-          pr_title: "Release ${{ github.event.inputs.version }}"
-          pr_body: "(This release PR was automatically generated via GitHub Actions)"
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          tag_name: v${{ github.event.inputs.version }}
+          release_name: ${{ github.event.inputs.version }}
+          draft: false
+          prerelease: false
+
+      - name: Upload Release Asset
+        id: upload-release-asset
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: maxhoesel-pterodactyl-${{ github.event.inputs.version }}.tar.gz
+          asset_name: maxhoesel-pterodactyl-${{ github.event.inputs.version }}.tar.gz
+          asset_content_type: application/tar+gzip
+
+      - name: Deploy Ansible collection to Galaxy
+        run: ansible-galaxy collection publish maxhoesel-pterodactyl-${{ github.event.inputs.version }}.tar.gz --api-key ${{ secrets.GALAXY_API_KEY }}
