--- a/tox.ini
+++ b/tox.ini
@@ -15,8 +15,8 @@ deps =
 passenv =
     HOME
 setenv =
-    PY_COLORS = "1"
-    ANSIBLE_FORCE_COLOR = "1"
+    PY_COLORS = 1
+    ANSIBLE_FORCE_COLOR = 1
 
 [testenv:lint]
 description = Lint Ansible roles and git commits
