fix(pterodactyl_wings): don't overwrite existing config variables

--- a/roles/pterodactyl_wings/tasks/main.yml
+++ b/roles/pterodactyl_wings/tasks/main.yml
@@ -59,6 +59,21 @@
           bind_port: "{{ pterodactyl_wings_sftp_port }}"
       allowed_mounts: "{{ pterodactyl_wings_allowed_mounts }}"
       remote: "{{ pterodactyl_wings_remote }}"
+- name: Look for existing config file
+  stat:
+    path: "{{ pterodactyl_wings_config_dir }}/config.yml"
+  register: _pterodactyl_wings_config_file
+
+- block:
+  - name: Read current configuration
+    command: "cat {{ pterodactyl_wings_config_dir }}/config.yml"
+    register: _pterodactyl_wings_config_current
+    changed_when: no
+  - name: Merge existing configuration new config
+    set_fact:
+      pterodactyl_wings_config: "{{ _pterodactyl_wings_config_current.stdout|from_yaml | combine(pterodactyl_wings_config) }}"
+  when: _pterodactyl_wings_config_file.stat.exists
+
 - name: Wings config file is installed
   template:
     src: config.yml.j2
@@ -67,6 +82,7 @@
     group: root
     mode: 0640
   notify: restart wings
+  when: (_pterodactyl_wings_config_current.stdout|from_yaml)|default({}) != pterodactyl_wings_config
 
 - name: Wings service file is present
   template:
