--- a/roles/pterodactyl_wings/tasks/main.yml
+++ b/roles/pterodactyl_wings/tasks/main.yml
@@ -71,7 +71,7 @@
     changed_when: no
   - name: Merge existing configuration new config
     set_fact:
-      pterodactyl_wings_config: "{{ _pterodactyl_wings_config_current.stdout|from_yaml | combine(pterodactyl_wings_config) }}"
+      pterodactyl_wings_config: "{{ _pterodactyl_wings_config_current.stdout|from_yaml | combine(pterodactyl_wings_config, recursive=True, list_merge='keep') }}"
   when: _pterodactyl_wings_config_file.stat.exists
 
 - name: Wings config file is installed
