--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -23,8 +23,9 @@ jobs:
         uses: actions/setup-python@v2
       - name: Install dependencies
         run: |
-          wget https://github.com/git-chglog/git-chglog/releases/download/v0.11.2/git-chglog_0.11.2_linux_amd64.tar.gz -O git-chglog.tar.gz
-          tar xf git-chglog.tar.gz
+          mkdir ./tmp-chglog
+          wget https://github.com/git-chglog/git-chglog/releases/download/v0.11.2/git-chglog_0.11.2_linux_amd64.tar.gz -O ./tmp-chglog/git-chglog.tar.gz
+          tar xf ./tmp-chglog/git-chglog.tar.gz --directory ./tmp-chglog
           python -m pip install --upgrade pip
           pip install --upgrade ansible
 
@@ -37,8 +38,10 @@ jobs:
         run: |
           sed -i '/version: */c\version: ${{ github.event.inputs.version }}' galaxy.yml
 
-      - name: Generate full changelog
-        run: "./git-chglog --next-tag v${{ github.event.inputs.version }} --output CHANGELOG.md"
+      - name: Generate full changelog and remove git-chglog files
+        run: |
+          ./tmp-chglog/git-chglog --next-tag v${{ github.event.inputs.version }} --output ./CHANGELOG.md
+          rm -rf tmp-chglog
 
       - name: Commit and push Release
         run: |
