--- a/roles/pterodactyl_panel/tasks/detect_install_upgrade.yml
+++ b/roles/pterodactyl_panel/tasks/detect_install_upgrade.yml
@@ -1,17 +1,18 @@
 - block:
-  - name: Get latest panel release information
-    uri:
-      url: https://api.github.com/repos/pterodactyl/panel/releases/latest
-      body_format: json
-      return_content: yes
-    register: pterodactyl_panel_latest_release
-    delegate_to: localhost
-    run_once: yes
-    retries: 3
-    delay: 5
-  - name: Set latest release version
-    set_fact:
-      pterodactyl_panel_version: "{{ (pterodactyl_panel_latest_release.json.tag_name) }}"
+    - name: Get latest panel release information
+      uri:
+        url: https://api.github.com/repos/pterodactyl/panel/releases/latest
+        body_format: json
+        return_content: yes
+      register: pterodactyl_panel_latest_release
+      delegate_to: localhost
+      run_once: yes
+      retries: 3
+      delay: 5
+      check_mode: no
+    - name: Set latest release version
+      set_fact:
+        pterodactyl_panel_version: "{{ (pterodactyl_panel_latest_release.json.tag_name) }}"
   when: pterodactyl_panel_version == 'latest'
 
 - name: Set download url
@@ -24,18 +25,19 @@
   register: pterodactyl_panel_envfile
 
 - block:
-  - name: Get currently installed version
-    shell: "cat {{ pterodactyl_panel_webroot }}/config/app.php  | grep \"'version' =>\" | cut -d \"'\" -f 4"
-    changed_when: no
-    register: pterodactyl_panel_detected_version
-  - name: Prepend v to detected version
-    set_fact:
-      pterodactyl_panel_detected_version: "v{{ pterodactyl_panel_detected_version.stdout }}"
+    - name: Get currently installed version
+      shell: 'cat {{ pterodactyl_panel_webroot }}/config/app.php  | grep "''version'' =>" | cut -d "''" -f 4'
+      changed_when: no
+      check_mode: no
+      register: pterodactyl_panel_detected_version
+    - name: Prepend v to detected version
+      set_fact:
+        pterodactyl_panel_detected_version: "v{{ pterodactyl_panel_detected_version.stdout }}"
 
-  - name: Don't allow a version downgrade
-    fail:
-      msg: >
-        Detected panel version '{{ pterodactyl_panel_detected_version }}' is newer than desired version '{{ pterodactyl_panel_version }}'.
-        Downgrades to older versions are not supported
-    when: pterodactyl_panel_detected_version is version(pterodactyl_panel_version, '>')
+    - name: Don't allow a version downgrade
+      fail:
+        msg: >
+          Detected panel version '{{ pterodactyl_panel_detected_version }}' is newer than desired version '{{ pterodactyl_panel_version }}'.
+          Downgrades to older versions are not supported
+      when: pterodactyl_panel_detected_version is version(pterodactyl_panel_version, '>')
   when: pterodactyl_panel_envfile.stat.exists
