--- a/roles/pterodactyl_wings/tasks/main.yml
+++ b/roles/pterodactyl_wings/tasks/main.yml
@@ -66,13 +66,14 @@
   register: _pterodactyl_wings_config_file
 
 - block:
-  - name: Read current configuration
-    command: "cat {{ pterodactyl_wings_config_dir }}/config.yml"
-    register: _pterodactyl_wings_config_current
-    changed_when: no
-  - name: Merge existing configuration new config
-    set_fact:
-      pterodactyl_wings_config: "{{ _pterodactyl_wings_config_current.stdout|from_yaml | combine(pterodactyl_wings_config, recursive=True, list_merge='keep') }}"
+    - name: Read current configuration
+      command: "cat {{ pterodactyl_wings_config_dir }}/config.yml"
+      register: _pterodactyl_wings_config_current
+      changed_when: no
+      check_mode: no
+    - name: Merge existing configuration new config
+      set_fact:
+        pterodactyl_wings_config: "{{ _pterodactyl_wings_config_current.stdout|from_yaml | combine(pterodactyl_wings_config, recursive=True, list_merge='keep') }}"
   when: _pterodactyl_wings_config_file.stat.exists
 
 - name: Wings config file is installed
