--- a/roles/pterodactyl_panel/molecule/default/requirements.yml
+++ b/roles/pterodactyl_panel/molecule/default/requirements.yml
@@ -2,3 +2,6 @@ collections:
   # Used by molecule-docker to manage containers
   - name: community.general
   - name: community.docker
+
+roles:
+  - geerlingguy.mysql
