--- a/roles/pterodactyl_panel/handlers/main.yml
+++ b/roles/pterodactyl_panel/handlers/main.yml
@@ -5,6 +5,11 @@
     name: pteroq.service
     state: restarted
 
+- name: Restart schedule service
+  systemd:
+    name: pterosched.service
+    state: restarted
+
 - name: Restart apache2
   systemd:
     name: apache2
