--- a/roles/pterodactyl_panel/molecule/default/prepare.yml
+++ b/roles/pterodactyl_panel/molecule/default/prepare.yml
@@ -5,6 +5,21 @@
         update_cache: yes
       when: ansible_os_family == "Debian"
 
+    - name: Install MySQL
+      include_role:
+        name: geerlingguy.mysql
+      vars:
+        mysql_root_password: super-secure-password
+        mysql_databases:
+          - name: panel_molecule
+            encoding: utf8mb4
+            collation: utf8mb4_general_ci
+        mysql_users:
+          - name: panel_molecule
+            host: "%"
+            password: panel_molecule
+            priv: "panel_molecule.*:ALL"
+
     - name: Copy existing SSL cert/key to nodes
       copy:
         src: "{{ item }}"
