--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -78,21 +78,26 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: "3.6"
-      - name: Discover roles
-        id: set-roles
+
+      - name: Install tox and initialize workdir
         run: |
-          export roles=$(python3 -c "import os; import json; print(json.dumps(os.listdir('roles')));")
-          echo "::set-output name=roles::$roles"
+          sudo apt update && sudo apt install -y tox
+          tox -l
+
+      - name: Discover scenarios
+        id: set-scenarios
+        run: |
+          export scenarios="[`for l in $(tox -l); do echo "'$l'"; done | grep ansible | grep -v "lint" | tr '\n' ',' | sed '$s/,$//'`]"
+          echo "::set-output name=scenarios::$scenarios"
 
   roles:
-    name: "${{ matrix.role }}"
+    name: "${{ matrix.scenario }}"
     runs-on: ubuntu-latest
-    needs: discover-roles
+    needs: discover-scenarios
     strategy:
       fail-fast: false
-      max-parallel: 50
       matrix:
-        role: ${{ fromJson(needs.discover-roles.outputs.roles) }}
+        scenario: ${{ fromJson(needs.discover-scenarios.outputs.scenarios) }}
     steps:
       - name: Check out codebase
         uses: actions/checkout@v2
@@ -117,4 +122,4 @@ jobs:
       - name: Initialize tox
         run: tox -l
       - name: Run role tests
-        run: tox -e "$(tox -l | grep ansible | grep ${{ matrix.role }} | tr '\n' ',')"
+        run: tox -e ${{ matrix.scenario }}
