--- a/tox.ini
+++ b/tox.ini
@@ -10,8 +10,8 @@ python = 3
 
 [testenv]
 deps =
-    roles: docker>=4.4,<5.0
-    roles: molecule-docker>=0.3,<0.4
+    roles: docker>=4.4
+    roles: molecule-docker>=1,<2
 passenv =
     HOME
 setenv =
