feat(pterodactyl_wings): allow docker installation from docker.com repo
This patch adds several new variables to the wings role that allow
customization of the docker install, including selecting between
distro-provided packages and the official packages from docker.com.
Alternatively, the user can now disable any docker installation
as well.

--- a/roles/pterodactyl_wings/defaults/main.yml
+++ b/roles/pterodactyl_wings/defaults/main.yml
@@ -17,3 +17,6 @@ pterodactyl_wings_upload_limit: 100
 
 pterodactyl_wings_sftp_port: 2022
 pterodactyl_wings_allowed_mounts: []
+
+pterodactyl_wings_docker_install: true
+pterodactyl_wings_docker_source: distro
