ci(pterodactyl_wings): fix ubuntu 18.04

--- a/roles/pterodactyl_wings/molecule/default/prepare.yml
+++ b/roles/pterodactyl_wings/molecule/default/prepare.yml
@@ -9,8 +9,10 @@
         group: root
         mode: "777"
 
-    - name: Update APT cache
+    - name: Update APT cache and install required packages
       apt:
+        name:
+          - tzdata
         update_cache: yes
       when: ansible_os_family == "Debian"
 
