--- a/roles/pterodactyl_wings/molecule/default/converge.yml
+++ b/roles/pterodactyl_wings/molecule/default/converge.yml
@@ -7,9 +7,22 @@
         name: "pterodactyl_wings"
       vars:
         pterodactyl_wings_docker_source: stable
-        pterodactyl_wings_cert: /etc/ssl/private/pterodactyl.crt
-        pterodactyl_wings_key: /etc/ssl/private/pterodactyl.key
-        # Placeholder values
-        pterodactyl_wings_token: dPigfaWa4I4xcY3o5sM3Hi3ST3duxHqCqu30fc3eO44lPj7msGY6R14YKCR6QZJ2
-        pterodactyl_wings_token_id: m9TVwtaw6FQQZt8H
-        pterodactyl_wings_uuid: 12544f88-cfbf-40b6-9432-a2bc14312112
+        pterodactyl_wings_config:
+          debug: false
+          uuid: 12544f88-cfbf-40b6-9432-a2bc14312112
+          token_id: m9TVwtaw6FQQZt8H
+          token: dPigfaWa4I4xcY3o5sM3Hi3ST3duxHqCqu30fc3eO44lPj7msGY6R14YKCR6QZJ2
+          api:
+            host: 0.0.0.0
+            port: 8080
+            ssl:
+              enabled: true
+              cert: "/etc/ssl/private/pterodactyl.crt"
+              key: "/etc/ssl/private/pterodactyl.key"
+            upload_limit: 100
+          remote: https://mypanel.example.com:443
+          system:
+            data: /var/lib/pterodactyl/volumes
+            sftp:
+              bind_port: 2022
+          allowed_mounts: []
