--- a/.gitignore
+++ b/.gitignore
@@ -143,6 +143,7 @@ dmypy.json
 # profiling data
 .prof
 
-maxhoesel-pterodactyl-*.tar.gz
+# Ansible collection archives
+*.tar.gz
 # Adding this to gitignore breaks ansible-test. so let's not do that
 #ansible_collections/
