ci: limit linting to commits/PRs (#26)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,7 @@ jobs:
   lint:
     name: "Lint"
     runs-on: ubuntu-latest
+    if: github.event_name == 'push' || github.event_name == 'pull_request'
     steps:
       - name: Check out codebase
         uses: actions/checkout@v2
