--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,8 @@ jobs:
           fetch-depth: 0
       - name: Set up Python 3
         uses: actions/setup-python@v3
+        with:
+          python-version: "3"
       - name: Set up pip and install requirements
         run: |
           python -m pip install --upgrade pip
@@ -39,6 +41,8 @@ jobs:
         uses: actions/checkout@v3
       - name: Set up Python 3
         uses: actions/setup-python@v3
+        with:
+          python-version: "3"
       - name: Set up pip and install requirements
         run: |
           python -m pip install --upgrade pip
@@ -67,6 +71,8 @@ jobs:
         uses: actions/checkout@v3
       - name: Set up Python 3
         uses: actions/setup-python@v3
+        with:
+          python-version: "3"
       - name: Set up pip and install requirements
         run: |
           python -m pip install --upgrade pip
@@ -92,8 +98,10 @@ jobs:
     steps:
       - name: Check out codebase
         uses: actions/checkout@v3
-      - name: Set up Python
+      - name: Set up Python 3
         uses: actions/setup-python@v3
+        with:
+          python-version: "3"
       - name: Set up pip and install requirements
         run: |
           python -m pip install --upgrade pip
