--- a/.github/workflows/release-automation.yml
+++ b/.github/workflows/release-automation.yml
@@ -30,6 +30,8 @@ jobs:
         uses: actions/checkout@v3
       - name: Set up Python 3
         uses: actions/setup-python@v3
+        with:
+          python-version: "3"
       - name: Set up pip and install requirements
         run: |
           python -m pip install --upgrade pip
