fix ansible-lint errors

--- a/roles/pterodactyl_panel/tasks/main.yml
+++ b/roles/pterodactyl_panel/tasks/main.yml
@@ -61,4 +61,5 @@
     name: pteroq.service
     enabled: yes
 
-- include_tasks: "apache2.yml"
+- name: Configure apache2
+  include_tasks: "apache2.yml"
