--- a/roles/pterodactyl_panel/handlers/main.yml
+++ b/roles/pterodactyl_panel/handlers/main.yml
@@ -1,11 +1,11 @@
 ---
 # handlers file for pterodactyl_panel
-- name: restart queue service
+- name: Restart queue service
   systemd:
     name: pteroq.service
     state: restarted
 
-- name: restart apache2
+- name: Restart apache2
   systemd:
     name: apache2
     state: restarted
