--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -21,6 +21,9 @@ repos:
     rev: v6.8.0
     hooks:
       - id: ansible-lint
+        args:
+          - "-P"
+          - "shared"
   - repo: local
     hooks:
       - id: pylint
